<resources>
    <string name="app_name">FinanceManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_currencies">Currencies</string>
    <string name="menu_statuses">Statuses</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="invalid_email">Email address is not valid</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register_instead">Register instead</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="morethan1char">Input must be >1 characters</string>
    <string name="pass_match">Passwords must match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cannot_be_empty">Can not be empty</string>
    <string name="amount_less_than_zero">Amount can not be 0 or less than 0</string>
</resources>
