<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_categories" />
    </group>

    <item android:title="User account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
